definitive fix for white flash & visible spinner
<3 @studiorabota

--- a/app/assets/stylesheets/pageflow/themes/scrollytelling/page.css.scss
+++ b/app/assets/stylesheets/pageflow/themes/scrollytelling/page.css.scss
@@ -26,14 +26,6 @@ $page-color: $main-color;
   &.invert {
     color: #000;
 
-    &.text_position_right {
-        background-color: transparent;
-    }
-
-    .blackLayer {
-        background-color: #fff;
-    }
-
     .shadow {
       @include shadow(#fff);
     }
